Sonar fix
Replace collect(Collectors.toList()) into toList(), replace lambda with method reference and replace map into anyMatch.